@@ -1,0 +1,69 @@
+var lxdProfileKeys = [
+    "boot.autostart",
+    "boot.autostart.delay",
+    "boot.autostart.priority",
+    "boot.host_shutdown_timeout",
+    "boot.stop.priority",
+    "limits.cpu",
+    "limits.cpu.allowance",
+    "limits.cpu.priority",
+    "limits.disk.priority",
+    "limits.kernel",
+    "limits.memory",
+    "limits.memory.enforce",
+    "limits.memory.hugepages",
+    "limits.memory.swap",
+    "limits.memory.swap.priority",
+    "limits.network.priority",
+    "limits.processes",
+    "linux.kernel_modules",
+    "migration.incremental.memory",
+    "migration.incremental.memory.goal",
+    "migration.incremental.memory.iterations",
+    "nvidia.driver.capabilities",
+    "nvidia.require.cuda",
+    "nvidia.require.driver",
+    "nvidia.runtime",
+    "raw.apparmor",
+    "raw.idmap",
+    "raw.lxc",
+    "raw.qemu",
+    "raw.seccomp",
+    "security.devlxd",
+    "security.devlxd.images",
+    "security.idmap.base",
+    "security.idmap.isolated",
+    "security.idmap.size",
+    "security.nesting",
+    "security.privileged",
+    "security.protection.delete",
+    "security.protection.shift",
+    "security.secureboot",
+    "security.syscalls.blacklist",
+    "security.syscalls.blacklist_compat",
+    "security.syscalls.blacklist_default",
+    "security.syscalls.intercept.mknod",
+    "security.syscalls.intercept.mount",
+    "security.syscalls.intercept.mount.allowed",
+    "security.syscalls.intercept.mount.fuse",
+    "security.syscalls.intercept.mount.shift",
+    "security.syscalls.intercept.setxattr",
+    "snapshots.expiry",
+    "snapshots.pattern",
+    "snapshots.schedule",
+    "snapshots.schedule.stopped",
+    "user.meta-data",
+    "user.network-config",
+    "user.network_mode",
+    "user.user-data",
+    "user.vendor-data",
+    // Cant be set on profile creation
+    // "volatile.apply_quota",
+    // "volatile.apply_template",
+    // "volatile.base_image",
+    // "volatile.idmap.base",
+    // "volatile.idmap.current",
+    // "volatile.idmap.next",
+    // "volatile.last_state.idmap",
+    // "volatile.last_state.power"
+];
